修改：增加fullCalendar日程设置

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@elfalem/leaflet-curve": "^0.6.0",
+    "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
+    "@fullcalendar/timegrid": "^5.4.0",
+    "@fullcalendar/vue": "^5.4.0",
     "@tweenjs/tween.js": "^18.5.0",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
@@ -17,10 +21,11 @@
     "es6-promise": "^4.2.8",
     "esri-leaflet": "^2.3.3",
     "geojson-vt": "^3.2.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "leaflet-canvas-geojson": "0.0.8",
     "leaflet-ellipse": "^0.9.1",
+    "moment": "^2.29.1",
     "proj4": "^2.6.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
