--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@elfalem/leaflet-curve": "^0.6.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fullcalendar/bootstrap": "^5.4.0",
+    "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/interaction": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
     "@fullcalendar/vue": "^5.4.0",
     "@tweenjs/tween.js": "^18.5.0",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.4.4",
     "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
