--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "proj4": "^2.6.1",
     "vue": "^2.6.10",
+    "vue-lunar-full-calendar": "^1.3.2",
     "vue-router": "^3.1.6",
     "webpack": "^4.42.1"
   },
