--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/interaction": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
     "@fullcalendar/vue": "^5.4.0",
+    "@logicflow/core": "^0.2.9",
     "@tweenjs/tween.js": "^18.5.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
