--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^2.6.10",
     "vue-lunar-full-calendar": "^1.3.2",
     "vue-router": "^3.1.6",
+    "vue-video-player": "^5.0.2",
     "vxe-table": "^3.2.18",
     "webpack": "^4.42.1",
     "xe-utils": "^3.1.13"
