--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet-ellipse": "^0.9.1",
     "moment": "^2.29.1",
     "proj4": "^2.6.1",
+    "three": "^0.130.1",
     "vue": "^2.6.10",
     "vue-lunar-full-calendar": "^1.3.2",
     "vue-router": "^3.1.6",
