--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "core-js": "^3.4.4",
+    "d3": "^7.0.0",
+    "d3-geo": "^3.0.1",
     "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
     "es6-promise": "^4.2.8",
